# FreeMMS

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/components/: freemms-cli.cmake  freemms-core.cmake
src/cli/: climain.cpp  climain.h  mms2plain.cpp  pain2mms.cpp
src/core/: Field.h  MMSEngine.cpp  MMSHexData.cpp  MMSHexDataGenerator.cpp  MMSHexDataGenerator.h  MMSHexDataParser.cpp  MMSHexDataParser.h  MMSInfo.cpp  MMSInfo.h  MMSMetaDataManager.cpp  MMSMetaDataManager.h  MMSParserCursor.cpp  MMSParserCursor.h  MMSPart.cpp  MMSPart.h  MMSResourceFetcher.cpp  MMSResourceFetcher.h  MMSV.h
src/core/include/: MMSEngine.h  MMSHexData.h
src/core/metadata/: character_sets_mibenum.json  mms_header_field.json  mms_option_content_type.json  mms_option_delivery_report.json  mms_option_message_class.json  mms_option_message_type.json  mms_option_priority.json  mms_option_response_status.json  mms_param_field.json  mms_param_wellknown.json
test/: CMakeLists.txt
test/resource/: 160767603214113640  160767603214113640.txt  163903889557724545
test/src/: hello_test.cpp
